# patch-prolog

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  TODO.md  build.rs
.claude/: settings.local.json
.github/workflows/: claude-code-review.yml  release.yml
crates/patch-prolog-core/: Cargo.toml
crates/patch-prolog-core/src/: builtins.rs  index.rs  parser.rs  term.rs  tokenizer.rs  unify.rs
crates/prolog-core/: Cargo.toml
crates/prolog-core/src/: builtins.rs  database.rs  index.rs  lib.rs  parser.rs  solver.rs  term.rs  tokenizer.rs  unify.rs
docs/: ARCHITECTURE.md  TESTING.md
docs/design/: BUILD_PIPELINE.md  COMPILER_MODEL.md  ISO_COMPLIANCE.md  SAFETY.md  SOLVER.md
examples/: family.pl  linting.pl
knowledge/: rules.pl  stdlib.pl
src/: compiler.rs  main.rs
tests/: integration.rs
