[workspace]
members = ["crates/patch-prolog-core"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Ed Sweeney <ed@onextent.com>"]
license = "MIT"

[package]
name = "patch-prolog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A Prolog compiler for linting generative AI output"

[dependencies]
patch-prolog-core = { path = "crates/patch-prolog-core", version = "=0.1.1" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
bincode = "1"

[build-dependencies]
patch-prolog-core = { path = "crates/patch-prolog-core", version = "=0.1.1" }
bincode = "1"
